--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,8 @@
   <meta name="twitter:image" content="#">
   <meta name="twitter:description" content="MusicWorld에서 다양한 음악 정보와 추천 플레이리스트를 확인하세요!" />
 
-  <link href="favicon.svg" rel="icon">
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="ico" href="favicon.svg">
   <title>오디오 캔버스 - 음악의 모든 것</title>
 </head>
 
